[package]

name = "di"
version = "0.2.0"
authors = [
  "Rust DI Developers",
  "Nerijus Arlauskas <nercury@gmail.com>"
]

documentation = "http://nercury.github.io/di-rs/di/index.html"
repository = "https://github.com/Nercury/di-rs"

readme = "README.md"

keywords = [
    "di", "dependency", "injection"
]

license = "MIT OR Apache-2.0"

description = "Ownership-driven dependency injection toolkit."

[lib]
name = "di"
doctest = true
